# thepeak-spotify

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg
tests/: spotify.py  spotify_oauth.py  spotify_playlist.py  spotify_search.py
